--- a/css/shop.css
+++ b/css/shop.css
@@ -161,6 +161,8 @@ ul.drop-down-menu ul {
     /*隱藏次選單*/
     /* display: none; */
     padding: 10px;
+    border-bottom-left-radius:6px;
+    border-bottom-right-radius:6px;
 }
 /* ul.drop-down-menu li:hover>ul {
     display: block;
