--- a/css/Customization.css
+++ b/css/Customization.css
@@ -3104,6 +3104,8 @@ footer .logo {
 #Shopping_cart_block_display {
     display: flex;
     justify-content: center;
+    margin-top: 2%;
+    margin-bottom: 1%;
 }
 
 #Shopping_cart_block_display_img {
@@ -3168,6 +3170,8 @@ footer .logo {
 #product_tips_p1_p1 {
     font-size: 18px;
     color: #3F1A09;
+    font-weight: 900;
+    font-size: 'Inter';
 }
 
 #product_tips_p1_p2,
@@ -3262,6 +3266,8 @@ footer .logo {
     margin: 0 15px;
     color: #3F1A09;
     font-size: 20px;
+   font-weight: 900;
+    font-family: 'Noto Serif TC';
 }
 
 #product_tips_btn1_div1_p2 {
@@ -3271,6 +3277,8 @@ footer .logo {
     margin: 0 15px;
     color: #3F1A09;
     font-size: 20px;
+    font-weight: 900;
+    font-family: 'Noto Serif TC';
 }
 
 #product_tips_cash1 {
@@ -3284,6 +3292,8 @@ footer .logo {
 #product_tips_cash1 p {
     font-size: 25px;
     color: #3F1A09;
+    font-weight: 900;
+    font-family: 'Inter';
 }
 
 #product_tips_garbage_can {
@@ -3301,9 +3311,9 @@ footer .logo {
 }
 
 #Checkout_area_product_display_hr_2 {
-    padding: 0 3% 0 22%;
+    /* padding: 0 3% 0 22%; */
     margin-bottom: 20%;
-
+    padding: 0 3% 0 3%;
 }
 
 
@@ -3356,8 +3366,10 @@ footer .logo {
 }
 
 #Checkout_area_commodity__content1 p {
-    font-size: 24px;
+    font-size: 18px;
     color: #3F1A09;
+    font-family: 'Inter';
+    font-weight: 900;
 }
 
 @media(max-width:1440px) {
@@ -3379,8 +3391,10 @@ footer .logo {
 }
 
 #Checkout_area_commodity__content2 p {
-    font-size: 24px;
+    font-size: 18px;
     color: #3F1A09;
+    font-family: 'Inter';
+    font-weight: 900;
 }
 
 @media(max-width:1440px) {
@@ -3402,8 +3416,9 @@ footer .logo {
 
 #Checkout_area_product_display_hr1 {
     /* padding: 0 5%; */
-    padding: 0 3% 0 22%;
+    /* padding: 0 3% 0 22%; */
     /* height: 5%; */
+    padding: 0 3% 0 3%;
 }
 
 #Checkout_area_Subtotal {
@@ -3421,6 +3436,12 @@ footer .logo {
 #Checkout_area_Subtotal_div {
     font-size: 24px;
     color: #3F1A09;
+}
+
+#Checkout_area_Subtotal_div p{
+    font-size: 18px;
+    font-weight: 900;
+    font-family: 'Inter';
 }
 
 @media(max-width:1440px) {
@@ -3454,6 +3475,7 @@ footer .logo {
 #Checkout_area_total_div p {
     font-size: 28px;
     color: #3F1A09;
+    font-weight: 600;
 }
 
 @media(max-width:1440px) {
@@ -3558,6 +3580,7 @@ footer .logo {
     justify-content: space-between;
     margin-left: 20px;
     width: 100%;
+    flex: 1;
 }
 
 .full_list_box_left_box1_content_text {
@@ -3578,22 +3601,22 @@ footer .logo {
 #full_list_box_left_box1_content_input {
     padding: 10px;
     border: 2px solid #E1CBAA;
-    border-radius: 10px;
-    width: 120%;
+    border-radius: 5px;
+    width: 140%;
 }
 
 #full_list_box_left_box1_content_class2 {
     /* padding: 0 5%; */
     padding-left: 20px;
-    margin-right: 58px;
+    margin-right: 95px;
     /* margin-left: 10%; */
 }
 
 #full_list_box_left_box1_content_input1 {
     padding: 10px;
     border: 2px solid #E1CBAA;
-    border-radius: 10px;
-    width: 120%;
+    border-radius: 5px;
+    width: 140%;
 }
 
 #full_list_box_left_box1_content_p3 {
@@ -3605,7 +3628,7 @@ footer .logo {
     width: 100%;
     padding: 10px;
     border: 2px solid #E1CBAA;
-    border-radius: 10px;
+    border-radius: 5px;
 }
 
 #full_list_box_left_box1_content_p4 {
@@ -3617,7 +3640,7 @@ footer .logo {
     width: 100%;
     padding: 10px;
     border: 2px solid #E1CBAA;
-    border-radius: 10px;
+    border-radius: 5px;
 }
 
 #full_list_box_left_box1_content_p5_box {
@@ -3847,6 +3870,7 @@ footer .logo {
 
 #full_list_box_left_box4_box_shipping_time {
     margin-top: 40%;
+    margin-top: 20%;
 }
 
 #full_list_box_left_box4_box_date_input {
@@ -3855,7 +3879,19 @@ footer .logo {
 }
 
 #full_list_box_left_box4_box_date_input label {
-    margin-right: 10px;
+    /* margin-right: 10px; */
+    margin-right: 30px;
+}
+
+#out_time1,#out_time2,#out_time3{
+    margin-right: 8px;
+}
+
+#full_list_box_left_box4_box_date_day{
+    padding: 5px 0;
+    border: 2px solid #E1CBAA;
+    border-radius: 5px;
+    margin-top: 8px;
 }
 
 #full_list_box_right {
@@ -3921,6 +3957,7 @@ footer .logo {
 #full_list_box_right_order_box_but1_div {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     border: 2px solid #E1CBAA;
     border-radius: 5px;
     width: 70%;
@@ -3958,12 +3995,18 @@ footer .logo {
     display: flex;
     align-items: center;
     margin: 0 10px;
+    font-size: 20px;
+    font-weight: 900;
+    font-family: 'Noto Serif TC';
 }
 
 #full_list_box_right_order_box_butbox_p3 {
     display: flex;
     align-items: center;
     margin: 0 10px;
+    font-size: 20px;
+    font-weight: 900;
+    font-family: 'Noto Serif TC';
 }
 
 #full_list_box_right_order_box_but2 {
@@ -4189,6 +4232,7 @@ footer .logo {
 }
 
 #checkout_block {
+    margin-bottom: 32px;
     position: absolute;
     bottom: 0;
 }
