--- a/css/Menu.css
+++ b/css/Menu.css
@@ -5,10 +5,15 @@
     justify-content: center;
     /* 固定位置 */
     width: 100%;
-    position: absolute;
     height: 80px;
-    z-index: 999;
-
+    z-index: 999; 
+    position: fixed;
+    padding: 20px 0;
+}
+#menu.scrolled{
+    padding: 0;
+    background-color: rgba(255, 253, 253, 0.9);
+    transition: 0.4s;
 }
 
 #menu_id {
@@ -24,7 +29,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 29px;
     display: none;
 }
 
@@ -46,7 +50,9 @@
     background-color: #FFF9F1;
 
 }
-
+#menu_id_icon_search:hover{
+    cursor: pointer;
+}
 #menu_id_search_divBox div {
     display: flex;
     align-items: center;
@@ -82,6 +88,9 @@
 #menu_id_search_divBox_a2 {
     /* margin-left: 50px; */
     margin-right: 10px;
+}
+#menu_id_search_divBox_a2:hover{
+    cursor: pointer;
 }
 
 #menu_id_search_li2 {
