--- a/css/shop.css
+++ b/css/shop.css
@@ -186,6 +186,8 @@ ul.drop-down-menu>li {
 ul.drop-down-menu ul li:hover {
     background-color: #E1CBAA ;
     opacity: 0.7;
+    padding: 10px;
+    cursor: pointer;
 }
 
 
